src/objects/Related_Account__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Accounts</relationshipLabel>
        <relationshipName>Child_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Companies</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Account</label>
    <nameField>
        <displayFormat>RA - {00000}</displayFormat>
        <label>Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>